add: 定时任务架构搭建  deviceVo携带数据用于渲染